--- a/hmmer/templates/blast.html
+++ b/hmmer/templates/blast.html
@@ -3,23 +3,73 @@
 
 {% block body %}
 
-<div style="text-align:left;padding-top:10px; padding-bottom:5px;font-weight:bold; border-width:1px;border-bottom-style:solid;font-size:1.2em;background-color:#FFFFFF;">Unique Subtypes</div>
+{% if shortnew_counts %}
+
+<div style="text-align:left;padding-top:10px; padding-bottom:5px;font-weight:bold; border-width:1px;border-bottom-style:solid;font-size:1.2em;background-color:#FFFFFF;"><a href="{% url "dlShortnew" id  %}">Short New Subtypes</a></div>
 <table cellspacing="0" cellpadding="10px">
     <tbody>
-        {% for row in unique_counts %}
+        {% for row in shortnew_counts %}
         <tr class="{% cycle '' 'altrow' as alt %}">
             {% if forloop.first %}
-            {% for key,value in row.items %}
-            <th>{{ key }}</th>
+            {% for header in shortnew_headers %}
+            <th>{{ header }}</th>
             {% endfor %}
             </tr><tr class="{% cycle alt  %}">
             {% endif %}
-            {% for key,value in row.items %}
-                <td>{{ value }}</td> 
+            {% for header in shortnew_headers %}
+                <td> {{ row | dictvalue:header }}</td>
             {% endfor %}
         </tr>
         {% endfor %}
     </tbody>
 </table>
+
+{% endif %}
+
+{% if unique_counts %}
+
+<div style="text-align:left;padding-top:10px; padding-bottom:5px;font-weight:bold; border-width:1px;border-bottom-style:solid;font-size:1.2em;background-color:#FFFFFF;"><a href="{% url "dlUnique" id %}">Unique Subtypes</a></div>
+<table cellspacing="0" cellpadding="10px">
+    <tbody>
+        {% for row in unique_counts %}
+        <tr class="{% cycle '' 'altrow' as alt %}">
+            {% if forloop.first %}
+            {% for header in unique_headers %}
+            <th>{{ header }}</th>
+            {% endfor %}
+            </tr><tr class="{% cycle alt  %}">
+            {% endif %}
+            {% for header in unique_headers %}
+                <td> {{ row | dictvalue:header }}</td>
+            {% endfor %}
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
+
+{% endif %}
+
+{% if perfect_counts %}
+
+<div style="text-align:left;padding-top:10px; padding-bottom:5px;font-weight:bold; border-width:1px;border-bottom-style:solid;font-size:1.2em;background-color:#FFFFFF;"><a href="{% url "dlPerfect" id %}Perfect Subtype</a>s</div>
+<table cellspacing="0" cellpadding="10px">
+    <tbody>
+        {% for row in perfect_counts %}
+        <tr class="{% cycle '' 'altrow' as alt %}">
+            {% if forloop.first %}
+            {% for header in perfect_headers %}
+            <th>{{ header }}</th>
+            {% endfor %}
+            </tr><tr class="{% cycle alt  %}">
+            {% endif %}
+            {% for header in perfect_headers %}
+                <td> {{ row | dictvalue:header }}</td>
+            {% endfor %}
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
+
+{% endif %}
 
 {% endblock %}
